examples/test/testpolicy12133.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy12133
  namespace: namespace43
spec:
  podSelector:
    matchLabels:
      key7: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value12
          key10: value28
          key29: value47
      podSelector:
        matchLabels:
          key35: value28
          key23: value33
